Remove utility methods from BtcReleaseClient. Use BitcoinUtils instead